# nekro-plugin-webapp

./: README.md  __init__.py  commands.py  models.py  plugin.py  pyproject.toml
.github/workflows/: ci.yml
cli/: __init__.py  app.py  main.py  stream.py
cli/config/: __init__.py  settings.py
core/: __init__.py  agent_loop.py  checkpoint.py  command_parser.py  context.py  error_feedback.py  logger.py  stream_processor.py  streaming_client.py  text_parser.py
notes/: streaming_tool_call_agent.py  streaming_tool_call_agent_架构与实现方案.md
prompts/: __init__.py  developer.py
runtime/: __init__.py  adapter.py  nekro.py  standalone.py
services/: __init__.py  compiler_client.py  dependency_resolver.py  deploy.py  html_generator.py  logger.py  node_manager.py  prompt_logger.py  runtime_state.py  task_manager.py  task_tracer.py  validator.py  vfs.py
services/local_compiler/: build.js  check.js  package-lock.json  package.json
tools/: __init__.py  block_tools.py  compile.py  control.py  file_ops.py
worker/: wrangler.toml
worker/public/: welcome.html
