[project]
name = "nekro-webapp"
version = "2.0.0"
description = "AI 驱动的 Web 应用开发工具包 - 支持独立 CLI 和 NekroAgent 插件双模式"
authors = [{ name = "KroMiose", email = "li_xiangff@163.com" }]
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    # 核心依赖
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "openai>=1.0.0",
    "toml>=0.10.0",
    "loguru>=0.7.0",
    # CLI & TUI
    "click>=8.0.0",
    "rich>=13.0.0",
    "textual>=7.3.0",
]

[project.optional-dependencies]
# TUI 界面
tui = ["textual>=0.40.0"]
# nekro-agent 插件模式
nekro = ["nekro-agent>=2.0.0"]

[project.scripts]
nekro-webapp = "cli.main:main"

[project.urls]
Repository = "https://github.com/KroMiose/nekro-plugin-webapp"
Documentation = "https://github.com/KroMiose/nekro-plugin-webapp/blob/main/README.md"
Issues = "https://github.com/KroMiose/nekro-plugin-webapp/issues"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "services", "tools", "prompts", "runtime", "cli"]


[tool.ruff]
extend-exclude = []
ignore = [
    "E402",
    "E501",
    "E722",
    "B008",
    "B905",
    "F401",
    "TID252",
    "TRY002",
    "TRY003",
    "RUF001",
    "RUF002",
    "RUF003",
    "RUF006",
    "RUF012",
    "RUF100",
    "PGH003",
    "N801",
    "A003",
]
select = [
    "F",
    "E",
    "I",
    "B",
    "A",
    "COM",
    "C4",
    "ISC",
    "PIE",
    "PYI",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SIM",
    "TID",
    "ARG",
    "PTH",
    "PGH",
    "TRY",
    "RUF",
]
